; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/gdi/gdi32/wine/enhmfdrv/extr_dc.c_emfpathdrv_EndPath.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/gdi/gdi32/wine/enhmfdrv/extr_dc.c_emfpathdrv_EndPath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { i32 (i32)* }
%struct.TYPE_14__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { {}* }

@pEndPath = common dso_local global i32 0, align 4
@emfpath_driver = common dso_local global %struct.TYPE_15__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_14__*)* @emfpathdrv_EndPath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emfpathdrv_EndPath(%struct.TYPE_14__* %0) #0 {
  %2 = alloca %struct.TYPE_14__*, align 8
  %3 = alloca %struct.TYPE_14__*, align 8
  %4 = alloca %struct.TYPE_14__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_14__* %0, %struct.TYPE_14__** %2, align 8
  %6 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %7 = call %struct.TYPE_14__* @get_emfdev(%struct.TYPE_14__* %6)
  store %struct.TYPE_14__* %7, %struct.TYPE_14__** %3, align 8
  %8 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %9 = load i32, i32* @pEndPath, align 4
  %10 = call %struct.TYPE_14__* @GET_NEXT_PHYSDEV(%struct.TYPE_14__* %8, i32 %9)
  store %struct.TYPE_14__* %10, %struct.TYPE_14__** %4, align 8
  %11 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %12 = call i32* @get_physdev_dc(%struct.TYPE_14__* %11)
  store i32* %12, i32** %5, align 8
  %13 = load i32 (i32)*, i32 (i32)** getelementptr inbounds (%struct.TYPE_15__, %struct.TYPE_15__* @emfpath_driver, i32 0, i32 0), align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @pop_dc_driver(i32* %14, %struct.TYPE_15__* @emfpath_driver)
  %16 = call i32 %13(i32 %15)
  %17 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_13__*, %struct.TYPE_13__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %19, i32 0, i32 0
  %21 = bitcast {}** %20 to i32 (%struct.TYPE_14__*)**
  %22 = load i32 (%struct.TYPE_14__*)*, i32 (%struct.TYPE_14__*)** %21, align 8
  %23 = load %struct.TYPE_14__*, %struct.TYPE_14__** %3, align 8
  %24 = call i32 %22(%struct.TYPE_14__* %23)
  %25 = load %struct.TYPE_14__*, %struct.TYPE_14__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_13__*, %struct.TYPE_13__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %27, i32 0, i32 0
  %29 = bitcast {}** %28 to i32 (%struct.TYPE_14__*)**
  %30 = load i32 (%struct.TYPE_14__*)*, i32 (%struct.TYPE_14__*)** %29, align 8
  %31 = load %struct.TYPE_14__*, %struct.TYPE_14__** %4, align 8
  %32 = call i32 %30(%struct.TYPE_14__* %31)
  ret i32 %32
}

declare dso_local %struct.TYPE_14__* @get_emfdev(%struct.TYPE_14__*) #1

declare dso_local %struct.TYPE_14__* @GET_NEXT_PHYSDEV(%struct.TYPE_14__*, i32) #1

declare dso_local i32* @get_physdev_dc(%struct.TYPE_14__*) #1

declare dso_local i32 @pop_dc_driver(i32*, %struct.TYPE_15__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
